# python-project-49

./: .gitignore  .pyproject.toml.swp  README.md  makefile  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py  logics.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: .brain_calc.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  run_game.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
