[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Five games that challenge you to answer simple math questions."
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules"
]
authors = ["Виктория Мальцева <malvicktoria2603@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Viktoria-Maltseva/python-project-49.git"
packages=[{include="brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:run"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
